# AI-Pick-Daily

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  要件定義案.txt
.claude/commands/: research.md
.github/workflows/: evening_batch.yml  evening_batch_jp.yml  fix_portfolio.yml  fix_portfolio_cash.yml  morning_batch.yml  morning_batch_jp.yml  post_market_jp.yml  post_market_us.yml  pre_market_jp.yml  pre_market_us.yml  reset_portfolio.yml  weekly_analysis.yml
config/: symbols.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  STRATEGY_V2_PROPOSAL.md  architecture_v2.md  implementation_summary.md  paper_trading_strategy.md  リサーチA.txt  リサーチE.txt  要件定義書.md
scripts/: daily_review.py  daily_review_jp.py  daily_scoring.py  daily_scoring_jp.py  fix_portfolio_cash.py  fix_portfolio_data.py  research_stock.py  reset_portfolio.py  weekly_reflection.py  weekly_research.py
scripts/migrations/: add_market_type.sql  fix_enum_type.sql
src/: __init__.py  batch_logger.py  config.py  logging_config.py
src/config/: __init__.py  jp_stocks.py
src/data/: __init__.py  async_fetcher.py  finnhub_client.py  supabase_client.py  symbol_loader.py  yfinance_client.py
src/information/: __init__.py  collector.py  models.py
src/judgment/: __init__.py  integration.py  models.py  prompts.py  service.py
src/llm/: __init__.py  claude_client.py  client.py  gemini_client.py  openai_client.py
src/meta_monitor/: __init__.py  actuator.py  detector.py  diagnostician.py  models.py  parameters.py  prompts.py  service.py
src/monitoring/: __init__.py  alerts.py  metrics.py
src/pipeline/: __init__.py  market_config.py  review.py  scoring.py
src/portfolio/: __init__.py  manager.py
src/reflection/: __init__.py  models.py  prompts.py  service.py
src/research/: __init__.py  models.py  prompts.py  service.py
src/scoring/: agents.py  agents_v2.py  composite.py  composite_v2.py  market_regime.py  threshold_optimizer.py
src/symbols/: jp_stocks.py
src/utils/: technical.py
supabase/migrations/: 000_safe_full_schema.sql  001_initial_schema.sql  002_add_strategy_mode.sql  003_add_return_tracking.sql  004_add_feedback_loop_and_portfolio.sql  005_add_risk_metrics.sql  006_add_judgment_records.sql  007_add_batch_execution_logs.sql  008_add_stock_universe.sql  009_add_market_type_to_ai_lessons.sql  009_fix_rls_security.sql  010_add_research_logs.sql  011_add_batch_review_tracking.sql  012_add_missing_objects.sql  014_fix_v2_threshold.sql  015_add_factor_weights.sql  016_add_meta_monitor.sql  017_add_strategy_parameters.sql  018_add_shadow_model_support.sql  019_add_model_tracking.sql  (+2 more)
tests/: __init__.py  conftest.py
web/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
(+87 files in other folders)
